feat: 콜백, 안부전화 완료로 인한 시니또 포인트 적립 기능