@@ -12,6 +12,8 @@ import com.example.sinitto.guard.repository.SeniorRepository;
 import com.example.sinitto.member.entity.Member;
 import com.example.sinitto.member.entity.Senior;
 import com.example.sinitto.member.repository.MemberRepository;
+import com.example.sinitto.point.entity.Point;
+import com.example.sinitto.point.repository.PointRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -38,6 +40,8 @@ class CallbackServiceTest {
     MemberRepository memberRepository;
     @Mock
     SeniorRepository seniorRepository;
+    @Mock
+    PointRepository pointRepository;
     @InjectMocks
     CallbackService callbackService;
 
@@ -66,7 +70,7 @@ class CallbackServiceTest {
 
         //then
         assertEquals(1, result.getContent().size());
-        assertEquals("James", result.getContent().get(0).seniorName());
+        assertEquals("James", result.getContent().getFirst().seniorName());
     }
 
     @Test
@@ -209,12 +213,14 @@ class CallbackServiceTest {
         Member member = mock(Member.class);
         Callback callback = mock(Callback.class);
         Senior senior = mock(Senior.class);
+        Point point = mock(Point.class);
 
         when(member.getId()).thenReturn(1L);
         when(callbackRepository.findById(callbackId)).thenReturn(Optional.of(callback));
         when(callback.getSenior()).thenReturn(senior);
         when(senior.getMember()).thenReturn(member);
         when(senior.getMember().getId()).thenReturn(1L);
+        when(pointRepository.findByMemberId(any())).thenReturn(Optional.of(point));
 
         //when
         callbackService.complete(memberId, callbackId);
